2010-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-actions, tramp-read-passwd):
	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection): Use VEC
	instead of PROC for caching "first-password-request".  Otherwise,
	new processes would not profit from passwords already entered.

	* tramp-cache.el (tramp-dump-connection-properties): Don't save
	"first-password-request" property.

2010-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-imap.el (tramp-imap-handle-insert-directory):
	* tramp-smb.el (tramp-smb-handle-insert-directory):
	Handle also directories.  (Bug#5478)

2010-02-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-dired-uncache): When DIR is not a
	directory, handle its directory component.
	(tramp-handle-file-remote-p): Let-bind `tramp-verbose' to 3; this
	function is called permanently and creates noise, otherwise.

	* tramp-imap.el (tramp-imap-handle-insert-directory):
	* tramp-smb.el (tramp-smb-handle-insert-directory):
	Handle the case, FILENAME is not in `default-directory'.  (Bug#5478)

2010-01-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-directory): Handle also symlinks,
	when FILENAME is not in `default-directory'.

2010-01-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-directory): Handle the case,
	FILENAME is not in `default-directory'.  (Bug#5478)
	(tramp-register-file-name-handlers): Add safe-magic property.

2010-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-process-environment): Use `format'
	instead of `concat'.
	(tramp-check-for-regexp): User (forward-line 1).
	(tramp-open-connection-setup-interactive-shell): Handle "=" in
	variable values properly.
	(tramp-find-inline-encoding): Raise an error, when no encoding is
	found.
	(tramp-wait-for-output): Remove spurious " ^H" sequences, sent by
	busybox.
	(tramp-get-ls-command): Suppress coloring, if possible.
